# Proyecto-Final-Arqui-de-Software

./: .dockerignore  .env  .env.example  Dockerfile  app_instance.py  compose.yml  database.py  docker-entrypoint.sh  emailmanager.py  init.sql  logic.py  main.py  pyproject.toml  readme.md  requirements.txt  test.py
APIs/: Attendees.py  Events.py  Persons.py  Users.py
Metodos/: Usuarios.py  eventos.py
Tables_SQL/: create_event_attendees_table.py  create_events_table.py  create_persons_table.py  create_users_table.py  setup_project_tables.py
docs/: ADR-001-Controller-Service-Pattern.md  ADR-002-Raw-SQL.md  ADR-003-Dockerized-Architecture.md  C4-Diagrams-Description.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Modal.jsx
frontend/src/layouts/: MainLayout.jsx
frontend/src/pages/: EventDetails.jsx  Events.jsx  Home.jsx  Persons.jsx  Users.jsx
frontend/src/services/: api.js  attendeeService.js  eventService.js  personService.js  userService.js
templates/: db_test.html  error.html  index.html  persons_add.html  persons_list.html  products_add.html  products_list.html
tests/: test_integration.py  test_smoke.py  test_unit.py
